# mcp-guard

./: .gitignore  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: architecture.d2  architecture.md  development.md  flow.d2  index.md  policy.md  usage.md
src/: audit.rs  cli.rs  hitl.rs  lib.rs  main.rs  policy.rs  proxy.rs  rpc.rs
tests/: audit_test.rs  hitl_test.rs  integration_test.rs  policy_test.rs  rpc_test.rs  test_clippy.rs  test_formatting.rs
