[package]
name = "mcp-guard"
version = "0.9.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.11"
inquire = "0.7"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
serde_yaml = "0.9"
chrono = "0.4"
futures = "0.3"
native-dialog = "0.9.6"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
# Correctness & safety
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Style & readability
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Performance
needless_collect = "warn"
inefficient_to_string = "warn"

# Nursery (useful but may have false positives)
redundant_clone = "warn"
